Fixed overflow width.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -185,7 +185,6 @@ button {
 
 /*--<NAV BAR>--*/
 .nav {
-  position: fixed;
   width: 94%;
   height: 4rem;
   margin-top: 1.6rem;
