--- a/SCSS/Components/_project.scss
+++ b/SCSS/Components/_project.scss
@@ -180,7 +180,6 @@ button {
 /*--<NAV BAR>--*/
 
 .nav {
-  position: fixed;
   width: 94%;
   height: 4rem;
   margin-top: 1.6rem;
